Some small UI changes.

--- a/PaymentGateway/Views/Home/Index.cshtml
+++ b/PaymentGateway/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-left">
+    <h1 class="display-4">Welcome to the payment gateway!</h1>
+    <br />
+    <p><a href="/swaggerui/index.html">Check out the API docs (swagger)</a></p>
+    <p><a href="/metrics">Metrics</a></p>
+    <p><a href="/env">Hosting environment info</a></p>
 </div>
