--- a/PaymentGateway/Views/Shared/_Layout.cshtml
+++ b/PaymentGateway/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/swaggerui/index.html">Swagger Docs</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/metrics">Metrics</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -37,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - PaymentGateway - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2019 - Dave Allen - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
